# PFM-007

./: .gitignore  2024-10-14~2025-10-14.xlsx  LAYOUT_IMPROVEMENTS.md  Makefile  README.md  analyze-samples.js  bank october.xlsx  banksalad 84607.xlsx  banksalad sample.xlsx  banksalad.xlsx  check_root_tables.py  jisu.xlsx  test-transfer-matching.xlsx  test_transfer_matching.py  ~$banksalad sample.xlsx
apps/backend/: alembic.ini  pyproject.toml  pytest.ini
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 1189df8c6f4e_add_auto_transfer_match_flag.py  20251104_adding_user_id_to_account_v2.py  2d6c9a2e9f7d_normalize_timestamps_to_kst.py  420508eb3eb3_baseline_2025_11_04.py  4a7b0bbbc6d1_add_statistics_presets.py  4f15a3d7cb7d_add_calendar_events.py  5b2a4c9ad4b1_add_transaction_exclude_flag.py  70436ffa40dd_merge_heads_a1b2c3d4e5f6_and_.py  7576241bf5fa_add_budget_uniqueness.py  (+7 more)
apps/backend/app/: account_v2_metadata_schemas.py  main.py  models.py  routers.py  schemas.py  schemas_v2.py  seed.py
apps/backend/routers/: __init__.py  accounts.py  transactions.py
apps/backend/tests/: conftest.py  test_account_v2.py  test_account_v2_user_scope.py  test_analytics.py  test_analytics_timeline.py  test_api.py  test_api_basic.py  test_budget_summary.py  test_bulk_update.py  test_bulk_upload.py  test_db_transfer_matching.py  test_distributed_upload.py  test_normalization.py  test_recurring.py  test_recurring_candidate_exclusions.py  test_statistics_presets.py  test_transaction_bulk_service.py  test_transfer_pairing_service.py  test_txn_update.py
(+184 files in other folders)
