[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pfm-backend"
version = "0.1.0"
description = "Personal Finance Manager Backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "tzdata>=2024.1",
]

[tool.uvicorn]
app = "app.main:app"
host = "127.0.0.1"
port = 8000
reload = true
